--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,27 @@
 aiohttp==3.7.3
+aiohttp-jinja2==1.4.2
+appdirs==1.4.4
 async-timeout==3.0.1
 attrs==20.3.0
+black==20.8b1
 chardet==3.0.4
+click==7.1.2
 idna==3.1
 iniconfig==1.1.1
+Jinja2==2.11.3
+MarkupSafe==1.1.1
 multidict==5.1.0
+mypy-extensions==0.4.3
 packaging==20.9
+pathspec==0.8.1
+pkg-resources==0.0.0
 pluggy==0.13.1
 py==1.10.0
 pyparsing==2.4.7
 pytest==6.2.2
 pytest-aiohttp==0.3.0
+regex==2020.11.13
 toml==0.10.2
+typed-ast==1.4.2
 typing-extensions==3.7.4.3
 yarl==1.6.3
